--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://www.notion.so/stardavos/Security-Operations-1bc3e028b6f980feb6fadf90f78f83fa?source=copy_link&cookie_sync_completed=true"></iframe>
+    <iframe src="https://www.notion.so/stardavos/Security-Operations-1bc3e028b6f980feb6fadf90f78f83fa?source=copy_link"></iframe>
 </body>
 </html>
